// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component AttributionIncomplete should have a proper style generator 1`] = `
Object {
  "checkboxRoot": Object {},
  "label": Object {
    "fontSize": 16,
    "fontWeight": 300,
    "lineHeight": "24px",
    "textAlign": "justify",
  },
  "root": Object {
    "margin": 0,
  },
}
`;

exports[`Component AttributionIncomplete should have a proper style generator 2`] = `
Object {
  "checkboxRoot": Object {},
  "label": Object {
    "fontSize": 16,
    "fontWeight": 300,
    "lineHeight": "24px",
    "textAlign": "justify",
  },
  "root": Object {
    "margin": 0,
  },
}
`;

exports[`Component AttributionIncomplete should render checked if record is checked 1`] = `
<Fragment>
  <div>
    <ForwardRef(Typography)
      variant="caption"
    >
      Test detail
    </ForwardRef(Typography)>
  </div>
  <ForwardRef(FormControlLabel)
    classes={
      Object {
        "root": undefined,
      }
    }
    control={
      <ForwardRef(Checkbox)
        checked={true}
        classes={
          Object {
            "checked": undefined,
            "root": undefined,
          }
        }
        inputProps={
          Object {
            "data-analyticsid": "attributionIncomplete-input",
            "data-testid": "attributionIncomplete-input",
            "id": "attributionIncomplete-input",
          }
        }
        onChange={[Function]}
      />
    }
    disabled={false}
    label={
      <ForwardRef(Typography)
        classes={
          Object {
            "root": "",
          }
        }
        component="div"
        data-testid="attributionIncomplete-label"
        id="attributionIncomplete-label"
      >
        Test statement
      </ForwardRef(Typography)>
    }
  />
</Fragment>
`;

exports[`Component AttributionIncomplete should render default view 1`] = `
<Fragment>
  <div>
    <ForwardRef(Typography)
      variant="caption"
    >
      Test detail
    </ForwardRef(Typography)>
  </div>
  <ForwardRef(FormControlLabel)
    classes={
      Object {
        "root": undefined,
      }
    }
    control={
      <ForwardRef(Checkbox)
        checked={false}
        classes={
          Object {
            "checked": undefined,
            "root": undefined,
          }
        }
        inputProps={
          Object {
            "data-analyticsid": "attributionIncomplete-input",
            "data-testid": "attributionIncomplete-input",
            "id": "attributionIncomplete-input",
          }
        }
        onChange={[Function]}
      />
    }
    disabled={false}
    label={
      <ForwardRef(Typography)
        classes={
          Object {
            "root": "",
          }
        }
        component="div"
        data-testid="attributionIncomplete-label"
        id="attributionIncomplete-label"
      >
        Test statement
      </ForwardRef(Typography)>
    }
  />
</Fragment>
`;
